@@ -3,7 +3,7 @@ use warnings;
 
 use SPVM::Builder::Config;
 my $bconf = SPVM::Builder::Config->new_c99;
-$bconf->append_ccflags('-fopenmp');
-$bconf->append_lddlflags('-lgomp');
+$bconf->add_ccflags('-fopenmp');
+$bconf->add_lddlflags('-lgomp');
 
 $bconf;
