@@ -3,6 +3,6 @@ use warnings;
 
 use SPVM::Builder::Config;
 my $bconf = SPVM::Builder::Config->new_c99;
-$bconf->append_lddlflags('-lz');
+$bconf->add_lddlflags('-lz');
 
 $bconf;
